update .env example. installed filament. added socialite for azure. install livewire.

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Europe/Amsterdam
+APP_URL=https://stbejobs.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -62,3 +62,15 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DO_ENDPOINT=https://ams3.digitaloceanspaces.com/
+DO_ACCESS_KEY_ID=
+DO_SECRET_ACCESS_KEY=
+DO_DEFAULT_REGION=AMS3
+DO_BUCKET=stbe
+# DO_FOLDER=hn3
+
+AZURE_CLIENT_ID=
+AZURE_CLIENT_SECRET=
+AZURE_REDIRECT_URI="${APP_URL}/oauth/callback/azure"
+AZURE_TENANT_ID=common
